[FIX] sending result 수정